--- a/css/style.css
+++ b/css/style.css
@@ -78,3 +78,12 @@
   margin-left: 40px; 
   margin-right: 40px;
 }
+/* strony o lekarzach: */
+.zdjecie-doktora{
+	text-align: center;
+}
+.opis-doktora{
+	border: 4px solid #6CBCF4;
+	padding: 20px;
+	font-weight: bold;
+}
