--- a/css/style.css
+++ b/css/style.css
@@ -12,10 +12,34 @@
   ); /* Przesunięcie o połowę szerokości i wysokości elementu */
   border-radius: 5px; /* Zaokrąglone rogi */
 }
-
+.notification1 {
+  display: none; /* Początkowo ukryte */
+  background-color: #fe1b1b; /* Zielone tło */
+  color: rgb(255, 255, 255); /* Biały tekst */
+  padding: 15px;
+  position: fixed; /* Pozostaje w jednym miejscu na ekranie */
+  top: 30%; /* Wyśrodkowanie w pionie */
+  left: 50%; /* Wyśrodkowanie w poziomie */
+  transform: translate(
+    -50%,
+    -50%
+  ); /* Przesunięcie o połowę szerokości i wysokości elementu */
+  border-radius: 5px; /* Zaokrąglone rogi */
+}
+.lobster-regular {
+  font-family: "Lobster", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+.tilt-neon {
+  font-family: "Tilt Neon", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
 .navbar-brand {
   font-weight: bold;
   font-size: 35px;
+  font-family: Tilt Neon;
 }
 
 .container-background {
@@ -27,11 +51,14 @@
 .naglowek-strony-edit {
   font-weight: bold;
   font-size: 30px;
+  font-family: Lobster;
 }
 .naglowekStrony {
   font-weight: bold;
+  font-size: 45px;
   color: #000000;
   margin-top: 30px;
+  font-family: Lobster;
 }
 .subtitle {
   text-align: center;
@@ -50,11 +77,10 @@
 }
 
 .buttonSaveData {
-  background-color: #6cbcf4;
+  background-color: rgb(139, 206, 250);
   border-radius: 10px;
   border-style: none;
   padding: 1%;
-  margin-left: 55%;
   margin-top: 10px;
 }
 .buttonRegisterVisit {
